--- a/Registry/src/main/resources/application.properties
+++ b/Registry/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Registry
-
+server.address=0.0.0.0
 server.port=8888
 eureka.client.fetch-registry=false
 eureka.client.register-with-eureka=false
